* Add sale, purchase or other kind on Tax Rule and Tax Group

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)
* Rename:
    - Move.name into number
    - Move.reference into post_number
    - MoveLine.reference into description
* Remove name and active on move line
* Add origin field on Move
* Compute the aged balance over all fiscalyears and reverse dates order
* Add cumulate option for Debit/Credit on Account
* Allow to open accounts from balance sheet
* Add start/end balance to Trial balance

Version 2.4.0 - 2012-04-23
* Bug fixes (see mercurial logs for details)
* Add new account type stock

Version 2.2.0 - 2011-10-24
* Bug fixes (see mercurial logs for details)
* Add test creation of minimal chart of accounts

Version 2.0.0 - 2011-04-27
* Bug fixes (see mercurial logs for details)

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)

Version 1.6.0 - 2010-05-11
* Bug fixes (see mercurial logs for details)
* Add description field on account.tax.code.template and account.tax.code
* Add tax field on account.tax.line
* Remove unique constraint on tax group code column
* Add default search value on account move
* Remove egenix-mx-base and replace it by python-dateutil
* Improve General Ledger to compute lines for each accounts at once

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)
* Add origin_tax field on account.tax.rule
* Change get_receivable_payable on party.party to work with a list of name
* Remove blocked field on account.move.line
* Fix digits of amount on tax and tax line

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)
* Add tax rule to replace vat and supplier_vat on party
  Previous vat configuration will be lost
* Allow to update chart of account from template
* Change sequence on Journal into Property for multi-company
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release