@@ -1,3 +1,4 @@
+* Make period's post_move_sequence optional and use fiscal year's one if empty
 * Add sale, purchase or other kind on Tax Rule and Tax Group
 
 Version 2.6.0 - 2012-10-22
